--- a/style.css
+++ b/style.css
@@ -1,216 +1,216 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: Whitney, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
     background-color: rgb(253, 248, 249);
-   
 }
 
-nav{
+#container {
     display: flex;
-    align-items: center;
     justify-content: space-between;
-    padding: 20px 8%;
-    
-}
-nav .logo{
-    font-size: 32px;
-    font-weight: 500;
-    cursor: pointer;
-}
-nav ul li{
-    list-style: none;
-    display: inline-block;
-}
-nav ul li a{
-    display: block;
-    margin: 0 10px;
-    color: #000;
-    font-weight: 500;
-    text-decoration: none;
-    font-size: 17px;
-    position: relative;
-}
-nav ul li a::before{
-    content: '';
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background-color: #000;
-    width: 0;
-    height: 2.5px;
-    transition: all 0.3s ease;
-}
-nav ul li a:hover::before{
-    width: 100%;
-}
-nav ul i{
-    font-size: 20px;
-    margin-left: 10px;
-    cursor: pointer;
-}
-h2{
-    font-weight: 500;
-    font-size: 20px;
-}
-.cost{
-    font-weight: bold;
-    font-size: 20px;
-}
-.off{
-    color: orange;
-    font-weight: 500;
+    margin-top: 100px;
+    margin-left: 20px;
+    margin-bottom: 700px;
 }
 
-.product-details ul li{
-    list-style: none;
-}
-.product-details{
-    margin-top: 15px;
-}
-.material-care ul li{
-    list-style: none;
-  
-}
-.material-care{
-    margin-top: 12px;
-}
-.flex-box{
-    display: flex;
-    width: 1000px;
-    margin: 20px auto;
-}
-.left{
+.left {
     width: 60%;
-}
-.big-img{
-    width: 400px;
-   
-}
-.big-img img{
-    width: inherit;
-}
-.images{
+    height: 400px;
     display: flex;
-    justify-content: space-between;
-    width: 76%;
+    flex-wrap: wrap;
+    gap: 2%;
+}
+
+.right {
+    width: 40%;
+    height: 400px;
+    margin-left: 3%;
+}
+
+.inner {
+    width: 49%;
+    height: auto;
+}
+
+.inner img {
+    width: 85%;
+}
+
+.right h1:nth-child(1) {
+    color: #282c3f;
+    padding: 0 20px 0 0;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 1;
+}
+
+.right h1:nth-child(2) {
+    color: #535665;
+    padding: 5px 20px 14px 0;
+    font-size: 20px;
+    opacity: .8;
+    font-weight: 400;
+}
+
+.ratings {
+    border: 1px solid lightgray;
+    height: 2em;
+    width: 50%;
+    border-radius: 3px;
+    display: flex;
+    padding: 2%;
+    padding-bottom: 5%;
+}
+
+.ratings p:nth-child(1) {
+    font-weight: bold;
+    margin-right: 3%;
+}
+
+s {
+    text-decoration: line-through;
+}
+
+.discount {
+    color: #282c3f;
+    font-weight: 500;
+    margin-right: 3%;
+}
+
+.offer {
+    font-weight: 500;
+    letter-spacing: .5px;
+    color: #ff905a;
+    margin-left: 3%;
+}
+
+.price-row {
     margin-top: 15px;
 }
-.small-img{
-    width: 90px;
-    height: 110px;
-    overflow: hidden;
-    border: 1.5px solid black;
-  margin-left: 15px;
+
+.inclusive {
+    color: #03a685;
+    font-weight: 500;
+    font-size: 14px;
+    display: block;
+    margin: 5px 10px 0 0;
+}
+
+.size-chart {
+    display: flex;
+    margin-top: 30px;
+    width: 10px;
+}
+
+.size-chart p:nth-child(1) {
+    font-size: 16px;
+    font-weight: 500;
+    margin-right: 30px;
+}
+
+.size-chart p:nth-child(2) {
+    color: #ff3e6c;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.size {
+    display: flex;
+    margin-top: 20px;
+}
+
+.size div {
+    padding: 3%;
+    border-radius: 50%;
+    border: 1px solid lightgray;
+    margin: 3%;
+}
+
+.bag-wish {
+    display: flex;
+    margin-top: 30px;
+    margin-bottom: 30px;
+
+}
+
+
+.bag-wish div:nth-child(1) {
+    background-color: #ff3e6c;
+    border: 1px solid #ff3e6c;
+    color: #fff;
+    margin-right: 20px;
+    padding: 4%;
+    border-radius: 3px;
+}
+
+.bag-wish div:nth-child(2) {
+    border: 1px solid lightgray;
+    padding: 4%;
+    border-radius: 3px;
+}
+
+.del {
+    font-weight: 500;
+}
+
+#pin {
+    width: 50%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 3%;
+}
+
+.pin-class {
+    font-size: 13px;
+    margin-bottom: 30px;
+}
+
+.para {
+    line-height: 2em;
+    margin-bottom: 40px;
+}
+
+.para2,
+.para3 {
+    line-height: 2em;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
+.para2 p,
+.para3 p {
+    font-size: 14px;
+    font-weight: 500;
+    color: #ff3f6c;
+}
+
+#bag,
+#wish {
+    cursor: pointer;
+    width: 230px;
+    height: 10px;
+    text-align: center;
+   padding-bottom: 7%;
    
 }
-.small-img img{
-    width: inherit;
-    cursor: pointer;
-    transition: all 0.3s ease;
-}
-.small-img:hover img{
-    transform: scale(1.2);
-}
-.url{
-    font-size: 16px;
-    font-weight: 400;
-    color: rgb(0, 102, 255);
-    
-}
-.pname{
-    font-size: 22px;
-    font-weight: 600;
-    margin-top: 30px;
-}
-.ratings i{
-    color: rgb(255, 136, 0);
-}
-.price{
-    font-size: 15px;
-    font-weight: 300;
-    margin: 20px 0;
-}
-.size{
-    display: flex;
-    align-items: center;
-    margin: 20px 0;
-    
-}
-.size-fit ul li{
-    list-style: none;
-}
-.size-fit{
-    margin-top: 10px;
-}
-.size p{
-    font-size: 16px;
-    font-weight: 500;
-}
-.psize{
-    width: 60px;
-    height: 30px;
-    border: 1px solid #ff5e00;
-    color: #000;
-    text-align: center;
-    margin: 0 10px;
-    cursor: pointer;
-    border-radius: 20px;
-}
-.psize :hover{
-    border: 9px solid black;
-}
-.psize.active{
-    border-width: 1.5px;
-    
-    font-weight: 500;
-}
-.quantity{
-    display: flex;
-}
-.quantity p{
-    font-size: 18px;
-    font-weight: 500;
-}
-.quantity input{
-    width: 40px;
-    font-size: 17px;
-    font-weight: 500;
-    text-align: center;
-    margin-left: 15px;
-}
-.btn-box{
-    display: flex;
-    margin-top: 40px;
-}
-.btn-box button{
-    font-size: 18px;
-    padding: 8px 32px;
+
+.inner img:hover {
+    transform: scale(1.1);
     border: none;
-    outline: none;
-    border-radius: 6px;
-    cursor: pointer;
-    /* color: white; */
-}
-.cart-btn{
-    background-color:rgb(246, 124, 124);
-    margin-right: 20px;
-    width: 290px;
-}
-.wish-btn{
-    /* background-color: #00aeff; */
-    width: 250px;
-} 
-.cart-btn:hover{
-    background-color:rgb(247, 158, 158);
-}
-.wish-btn:hover{
-   border: 2px solid rgb(26, 25, 25);
-   animation-duration: 0.2s;
+    transition: transform 0.3s ease;
 }
 
+#wish:hover {
+    border: 2px solid
+    black;
+    color: black;
+    transition: border-color 0.3s ease, color 0.3s ease;
+}
 
-
+.size div:hover {
+    border: 2px solid black;
+    transition: border-color 0.3s ease;
+}
