--- a/common css/navbar.css
+++ b/common css/navbar.css
@@ -214,6 +214,9 @@
     border: none;
     background-color: #f5f5f6;
   }
+  .menu-container >img{
+    display:none
+  }
   
   
   .studio-new{
@@ -473,13 +476,28 @@ visibility: visible;
     position: absolute;
     top: 0px;
     left: 0;
-    width: 90%;
-    z-index: 10;
+    width: 100%;
+    z-index: 15;
+  }
+  .menu-container >img{
+    display:flex;
+    top: 0;
+    /* margin-left: 100px; */
+    position: absolute;
+    z-index: 15;
+  }
+  .menu-bar>ul>img{
+    display: none;
+  }
+  #searchItem{
+    display: none;
   }
 
   .menu-container ul.active {
     display: flex;
+    flex-direction: column;
   }
+ 
 
   .menu-container ul li {
     padding: 10px;
@@ -497,6 +515,8 @@ visibility: visible;
     flex-direction: column;
     cursor: pointer;
     margin-right: 20px;
+    position: absolute;
+    left: 5;
   }
   .pro{
     height: fit-content;
@@ -505,4 +525,55 @@ visibility: visible;
     flex-direction: column;
     text-align: center;
   }
+  #nav-titles{
+    flex-direction: column;
+justify-content:start;
+margin: 2em;
+  }
+  .menHover:hover {
+    border:none;
+    /* margin-top: 10px; */
+
+    /* border: 1px solid #000; */
+  }
+  #wm:hover{
+    border:none;
+    
+
+  }
+  #kd:hover{
+    border:none;
+  }
+  #hl:hover{
+    border:none;
+  }
+  #beauty-tag:hover{
+    border:none;
+  }
+  #studio-tag:hover{
+    border:none;
+  }
+  #profile-tag:hover{
+    border:none;
+  }
+
+  .menu-bar ul li:hover .sub-menu-1 {
+    display: none;
+   
+  }
+  menu-bar ul li:hover bcg{
+    display: none;
+  }
+  .menu-bar ul li:hover .sub-menu-1 ul {
+    display: none;
+  }
+  .menu-bar ul li:hover .sub-menu-1 ul li {
+    width: 150px;
+    padding: 1px 5px;
+    background: transparent;
+    text-align: left;
+  }
+  #studio-tag{
+    display: none;
+   }
 }
